eliminating image and filtering errors

--- a/app/.env.example
+++ b/app/.env.example
@@ -59,3 +59,5 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 IMAGE_DIR=/storage/books
+
+HOST=http://localhost:8070
